--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
       <img src="Statics\Most Recnt.png" width="1920px" height="auto" />
 
       <div class="knowmore_button">
-        <img
+        <a href="UI UX.html"><img
           src="Statics\know more.png"
           width="307px"
           height="auto"
           alt="Know More"
         />
+        </a>
       </div>
     </div>
 
@@ -161,3 +162,4 @@
     </div>
   </body>
 </html>
+
