--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       <img src="Statics\Most Recnt.png" width="1920px" height="auto" />
 
       <div class="knowmore_button">
-        <a href="UI UX.html"><img
+        <a href="UI UX.html" target="_self"
+          ><img
           src="Statics\know more.png"
           width="307px"
           height="auto"
@@ -162,4 +163,5 @@
     </div>
   </body>
 </html>
+
 
