--- a/UI UX.html
+++ b/UI UX.html
@@ -16,7 +16,7 @@
       <div class="empty_container1"></div>
 
       <div class="navbar_text">
-        <a style="color: #fca311" href="Home Page.html" target="_self">Home</a>
+        <a style="color: #fca311" href="index.html" target="_self">Home</a>
         <a href="Graphic Design.html" target="_self">Graphic Design</a>
         <a href="Video Editing.html" target="_self">Video Editing</a>
         <a href="Resume.html" target="_self">Resume</a>
@@ -77,7 +77,7 @@
     <div class="footer">
       <div class="footer_left">
         <div class="footer_text">
-          <a href="Home Page.html" target="_self">Home</a>
+          <a href="index.html" target="_self">Home</a>
           <a href="Graphic Design.html" target="_self">Graphic Design</a>
           <a href="UI UX.html" target="_self">UI/UX</a>
           <a href="Video Editing.html" target="_self">Video Editing</a>
